Добавлена пагинация. Добавлена фильтрация публикаций по заголовку, автору и дате. Добавлены страницы добавления, изменения и удаления публикаций.

--- a/templates/flatpages/base.html
+++ b/templates/flatpages/base.html
@@ -19,12 +19,14 @@
             <div class="border-end bg-white" id="sidebar-wrapper">
                 <div class="sidebar-heading border-bottom bg-light">Меню</div>
                 <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/">Все новости</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">------------</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">-------------</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">------------</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">------------</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">------------</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/posts/">Все публикации</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/posts/search/">Поиск</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/create/">Добавить новость</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/1/edit/">Редактировать новость</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/1/delete/">Удалить новость</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/articles/create/">Добавить статью</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/articles/2/edit/">Редактировать статью</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/articles/2/delete/">Удалить статью</a>
                 </div>
             </div>
             <!-- Page content wrapper-->
@@ -36,8 +38,8 @@
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                                <li class="nav-item active"><a class="nav-link" href="#!">Домой</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#!">Связь</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="#!">Поиск</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#!">Добавить статью</a></li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
