--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,16 @@
 <html lang="en">
     <head>
         {% load static %}
+        {% load i18n %}
+        {# Load the tag library #}
+    {% load bootstrap5 %}
+
+    {# Load CSS and JavaScript #}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+
+    {# Display django.contrib.messages as Bootstrap alerts #}
+    {% bootstrap_messages %}
         <script src="{% static 'js/scripts.js' %}"></script>
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
         <meta charset="utf-8" />
@@ -17,16 +27,16 @@
         <div class="d-flex" id="wrapper">
             <!-- Sidebar-->
             <div class="border-end bg-white" id="sidebar-wrapper">
-                <div class="sidebar-heading border-bottom bg-light">Меню</div>
+                <div class="sidebar-heading border-bottom bg-light">{% trans "Menu" %}</div>
                 <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/posts/">Все публикации</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/posts/search/">Поиск</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/create/">Добавить новость</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/1/edit/">Редактировать новость</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/1/delete/">Удалить новость</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/articles/create/">Добавить статью</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/articles/2/edit/">Редактировать статью</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/articles/2/delete/">Удалить статью</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/posts/">{% trans 'All posts' %}</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/posts/search/">{% trans 'Search' %}</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/create/">{% trans 'Add news' %}</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/1/edit/">{% trans 'Edit news' %}</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/news/1/delete/">{% trans 'Delete news' %}</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/articles/create/">{% trans 'Add article' %}</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/articles/2/edit/">{% trans 'Edit article' %}</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/articles/2/delete/">{% trans 'Delete article' %}</a>
                 </div>
             </div>
             <!-- Page content wrapper-->
@@ -34,20 +44,36 @@
                 <!-- Top navigation-->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
                     <div class="container-fluid">
-                        <button class="btn btn-primary" id="sidebarToggle">Toggle Menu</button>
+                        <button class="btn btn-primary" id="sidebarToggle">{% trans "Toggle Menu" %}</button>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                                 {% if user.is_authenticated %}
                                 <li class="nav-item active"><a class="nav-link" href="/sign/login/">{{ user.username}}</a></li>
                                 {% if is_not_author %}
-                                <li class="nav-item active"><a class="nav-link" href="/sign/upgrade/">Стать автором</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="/sign/upgrade/">{% trans "Become an author" %}</a></li>
                                 {% endif %}
-                                <li class="nav-item active"><a class="nav-link" href="/accounts/logout/">Выйти</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="/accounts/logout/">{% trans "Log out" %}</a></li>
                                 {% else %}
-                                <li class="nav-item active"><a class="nav-link" href="/accounts/login/">Вход</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/accounts/signup/">Регистрация</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="/accounts/login/">{% trans "Log in" %}</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/accounts/signup/">{% trans "Sign up" %}</a></li>
+
                                 {% endif%}
+                                <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
+        <input type="hidden" name="next" value="{{ redirect_to }}">
+
+        <select name="language" id="">
+            {% get_available_languages as LANGUAGES %} <!-- получаем языки -->
+            {% get_language_info_list for LANGUAGES as languages %} <!-- Помещаем их в список languages -->
+
+            {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
+                <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                    {{ language.name_local }} - {{ language.code }}
+                </option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="set">
+    </form>
                                 <li class="nav-item dropdown">
                                     <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="#!">Действие</a>
@@ -71,3 +97,4 @@
 
     </body>
 </html>
+
